Labo les na de middag

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <section class="o-row o-row--body">
+    <section class="o-row o-row--body c-login">
         <div class="o-container u-max-width-xs">
             <h1 class="c-logo">
                 <svg class="c-logo__symbol" viewBox="0 0 119 24" xmlns="http://www.w3.org/2000/svg">
@@ -51,10 +51,10 @@
                             Remember me
                         </label>
                     </p>
-                    <p>
+                    <p class="c-card__button">
                         <input class="o-button-reset c-button" type="submit" value="Sign in" />
                     </p>
-                    <p>
+                    <p class="c-card__password">
                         <a href="#!">
                             Forgot password?
                         </a>
